[gd_scene load_steps=19 format=3 uid="uid://exbisxbyx6xe"]

[ext_resource type="Script" uid="uid://c5as4qmuktf0f" path="res://src/components/Main.gd" id="1_glv2v"]
[ext_resource type="PackedScene" uid="uid://0wgtaxeptis8" path="res://src/components/TableItem.tscn" id="2_5c70h"]
[ext_resource type="PackedScene" uid="uid://bhpbe080wk0y7" path="res://src/components/AddAppWindow.tscn" id="2_hk4rc"]
[ext_resource type="PackedScene" uid="uid://ccplq3fr0ohrg" path="res://src/components/JsonEditor.tscn" id="4_ewugk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewugk"]
bg_color = Color(0.09411765, 0.09411765, 0.105882354, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8giiu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glv2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uu6xs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r0du0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0i22p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chrbn"]
content_margin_left = 30.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4gxt3"]
content_margin_left = 5.0
bg_color = Color(0.14117648, 0.14117648, 0.14117648, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gxt3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vhqb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chrbn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hk4rc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk4rc"]
content_margin_left = 30.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ec3e"]
content_margin_top = 5.0
content_margin_bottom = 5.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")
metadata/_edit_use_anchors_ = true

[node name="AppContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ewugk")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="AppContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_use_anchors_ = true

[node name="MenuBarPanel" type="Panel" parent="AppContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8giiu")
metadata/_edit_use_anchors_ = true

[node name="ConfigBtns" type="HBoxContainer" parent="AppContainer/VBoxContainer/MenuBarPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.016666668
anchor_right = 0.0890625
anchor_bottom = 1.0166667
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_use_anchors_ = true

[node name="SettingsBtn" type="Button" parent="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_glv2v")
text = "Configurações"

[node name="BackBtn" type="Button" parent="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uu6xs")
text = "←"

[node name="ForwardBtn" type="Button" parent="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r0du0")
text = "→"

[node name="ContentPanel" type="Panel" parent="AppContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_0i22p")

[node name="ContentMargin" type="MarginContainer" parent="AppContainer/VBoxContainer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="TimerLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.14282227, 0.8125, 0.6555443, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_chrbn")
text = "00"
vertical_alignment = 1

[node name="Search" type="LineEdit" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4gxt3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4gxt3")
placeholder_text = "Busque aqui..."
caret_blink = true

[node name="AddItemBtn" type="Button" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0vhqb")
text = "Adicionar"

[node name="StopAllBtn" type="Button" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_chrbn")
text = "Parar tudo"

[node name="VSeparator" type="VSeparator" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_hk4rc")

[node name="TableContent" type="VBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TableHeader" type="HBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent"]
layout_mode = 2

[node name="NameContainer" type="HBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="ApplicationLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/NameContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hk4rc")
text = "Aplicação"

[node name="BtnContainer" type="HBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 36
alignment = 1

[node name="DevLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/BtnContainer"]
layout_mode = 2
text = "Dev"

[node name="StageLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/BtnContainer"]
layout_mode = 2
text = "Stage"

[node name="HomologLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/BtnContainer"]
layout_mode = 2
text = "Homolog"

[node name="ProdLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/BtnContainer"]
layout_mode = 2
text = "Prod"

[node name="ActionsContainer" type="HBoxContainer" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
alignment = 1

[node name="ActionsLabel" type="Label" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent/TableHeader/ActionsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Ações"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8ec3e")

[node name="TableItem" parent="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/TableContent" instance=ExtResource("2_5c70h")]
visible = false
layout_mode = 2

[node name="AddAppModal" parent="." instance=ExtResource("2_hk4rc")]
unique_name_in_owner = true
visible = false

[node name="JsonEditor" parent="." instance=ExtResource("4_ewugk")]
unique_name_in_owner = true
visible = false

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="AppContainer/VBoxContainer/MenuBarPanel/ConfigBtns/ForwardBtn" to="." method="_on_forward_btn_pressed"]
[connection signal="pressed" from="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer/AddItemBtn" to="." method="_on_add_item_btn_pressed"]
[connection signal="pressed" from="AppContainer/VBoxContainer/ContentPanel/ContentMargin/VBoxContainer/HBoxContainer/StopAllBtn" to="." method="_on_stop_all_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
